--- a/index.html
+++ b/index.html
@@ -16,25 +16,17 @@
     <form class="form" onsubmit="form.submit(event)">
       <div class="input-group">
         <label for="challenge" hidden>What do you need to figure out?</label>
-        <input type="text" name="challenge" id="challenge" placeholder="What do you need to figure out" />
+        <input type="text" name="challenge" id="challenge" placeholder="What do you need to figure out" required minlength="6"/>
       </div>
     </form>
     <h2>Past challenges</h2>
     <div class="past">
       <div class="challenges">
-        <div class="card">
-          <p>This was a challenge I had in the past</p>
-        </div>
-        <div class="card">
-          <p>This was a another challenge I had in the past</p>
-        </div>
-        <div class="card">
-          <p>This was yet another challenge I had in the past and will be the last of these examples</p>
-        </div>
       </div>
     </div>
   </main>
   <script src="./idb.js"></script>
+  <script src="./sanitize.js"></script>
   <script src="./challenge-collection.js"></script>
   <script src="./challenge-form.js"></script>
   <script src="./challenge-repo.js"></script>
